Clone ECO-cosmetics landing

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
-$c-gray: #eee;
+$colorDarkGreen: #344f10;
+$colorLightGreen: #8c9772;
+$colorBezh: #e4dfd3;
+$colordarkWhite: #f2f2f2;
+$colorLightGrey: #bdbdbd;
+$colorMiddleGrey: #8e8d8c;
+$colorDarkGrey: #333;
+
+$headerTopPaddingPhone: 15px;
+$headerTopPaddingPad: 25px;
+$headerTopPaddingDeskTop: 55px;
